--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,6 @@ body {
     color: var(--text-color);
 }
 
-a:-webkit-any-link {
-    color: unset;
-}
-
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
